Fix formatting and typos in release notes
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/5-0.md
+++ b/site/docs/release-notes/5-0.md
@@ -7,11 +7,11 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.0 is
 
 Release 5.0 is a major functional release focused on usability, both from the point of view of the first-time user of Egeria, and developers of the code.  It has six themes:
 
-* *Simplified up and running* - improvements to the OMAG Server Platform and administration services to make it easier to set up and run, plus new sample server configurations, and a python client for administration calls.
+* *Simplified up and running* - improvements to the OMAG Server Platform and administration services to make it easier to set up and run, plus new sample server configurations, and a python client for basic administration calls.
 * *Content pack of connector metadata* - metadata to pre-configure the connectors supplied with Egeria, and provide valid value sets describing technology types and file types.
 * *UI back-end consolidation* - updates to the view server to allow both Egeria UIs to connect to it whether it is running in the OMAG Server Platform or OMAG Server Runtime.  This eliminates the need to run the Egeria UI application.
 * *Digital Product Support* - new APIs for creating a digital product catalog.
-* *Survey Support* - new framework, services and report utility to support the surveying of infrastructure to understand its contents before embarking on wholesale cataloguing and governance.
+* *Survey Support* - new framework, services and report utility to support the surveying of digital resources to understand its contents before embarking on wholesale cataloguing and governance.
 * *Reduction of technical debt* - there has been internal code changes to remove deprecated code, remove the duplication of type information and bug fixes.
 
 
@@ -29,8 +29,8 @@ Release 5.0 is a major functional release focused on usability, both from the po
     * There are new lineage relationships called [*UltimateSource*](/types/7/0755-Ultimate-Source-Destination) and [*UltimateDestination*](/types/7/0755-Ultimate-Source-Destination) can be used to capture the size and edges of an element's lineage graph have been added.
     * The *GroupedMedia* relationship is deprecated in favour of [*DataContentForDataSet*](/types/2/0210-Data-Stores).
     * The [*DataFile*](/types/2/0220-Files-and-Folders) type has a attribute called *fileExtension*.  New types that inherit from *DataFile* have been defined for a wide range of file types: [*SpreadsheetFile*](/types/2/0220-Files-and-Folders), [*XMLFile*](/types/2/0220-Files-and-Folders), [*AudioFile*](/types/2/0221-Document-Stores), [*VideoFile*](/types/2/0221-Document-Stores), [*3DImageFile*](/types/2/0221-Document-Stores), [*RasterFile*](/types/2/0221-Document-Stores), [*VectorFile*](/types/2/0221-Document-Stores), [*SourceCodeFile*](/types/2/0280-Software-Development-Assets), [*ExecutableFile*](/types/2/0280-Software-Development-Assets), [*ScriptFile*](/types/2/0280-Software-Development-Assets), [*BuildInstructionFile*](/types/2/0280-Software-Development-Assets), [*YAMLFile*](/types/2/0280-Software-Development-Assets), [*PropertiesFile*](/types/2/0280-Software-Development-Assets), and [*ArchiveFile*](/types/2/0226-Archive-Files).  There is also a new relationship called [*ArchiveFileContents*](/types/2/0226-Archive-Files) to identify the contents of an archive file.
-    * There are new attribute called *isCaseSensitive* and *category* for [*ValidValueDefinition*](/types/5/0545-Reference-Data) that provides additional information used to match valid values. In addition, there are two new types of valid value relationship: *ValidValueAssociation* and *ConsistentValidValues*.
-    * The [*ConnectorType*](/types/2/0201-Connectors-and-Connections) entity has new attribute called *deployedImplementationType* to allow a connector writer to record the [deployed implementation type](/concepts/deployed-implementation-type) that the connector works with.
+    * There are new attributes called *isCaseSensitive* and *category* for [*ValidValueDefinition*](/types/5/0545-Reference-Data) that provides additional information used to match valid values. In addition, there are two new types of valid value relationship: *ValidValueAssociation* and *ConsistentValidValues*.
+    * The [*ConnectorType*](/types/2/0201-Connectors-and-Connections) entity has a new attribute called *deployedImplementationType* to allow a connector writer to record the [deployed implementation type](/concepts/deployed-implementation-type) that the connector works with.
 
 ??? warning "XTDB repository connector are now in egeria.git"
     The XTDB repository connector is now located in the core Egeria git repository which means it is always available in the containers and distributions.  This change is in recognition that XTDB is our premier metadata repository.  There are three new administration commands to simplify the configuration of an XTDB repository.
@@ -39,7 +39,7 @@ Release 5.0 is a major functional release focused on usability, both from the po
     * Configure XTDB with a local file-based key-value store
     * Configure XTDB with a connection, allowing more complex configurations to be set up
 
-   The java package name of the integrated version of the connector has changed from `org.odpi.egeria.connectors.juxt.xtdb.repositoryconnector.XtdbOMRSRepositoryConnectorProvider` to `org.odpi.openmetadata.adapters.repositoryservices.xtdb.repositoryconnector.XTDBOMRSRepositoryConnectorProvider` so it is possible to continue to run the original version of the XTDB connector in V5.0.
+    The java package name of the integrated version of the connector has changed from `org.odpi.egeria.connectors.juxt.xtdb.repositoryconnector.XtdbOMRSRepositoryConnectorProvider` to `org.odpi.openmetadata.adapters.repositoryservices.xtdb.repositoryconnector.XTDBOMRSRepositoryConnectorProvider` so it is possible to continue to run the original version of the XTDB connector in V5.0.
 
 ??? danger "XTDB hang, or platform exit due to mismatch crypto library"
     On the latest level of the MacOs operating system we have experienced hangs during server startup, or the OMAG Server Platform exiting with a message complaining about the unsafe load of a cryptographic library.  A question has been raised with the XTDB community to find out more about this library. In the meantime, there is a workaround if you see this issue: set the following environment variables before starting your OMAG Server Platform.  This switches XTDB to using its own cryptography libraries.
@@ -52,13 +52,13 @@ Release 5.0 is a major functional release focused on usability, both from the po
     There is a new `application.properties` property supported by the OMAG Server Platform that allows a default [configuration document](/concepts/configuration-document) to be set up for the configuration document store.  This provides the initial content for each new server configuration created on the platform.   The new property is called `platform.default.config.document` and is described in the [Administration Guide](/guides/admin/configuring-the-omag-server-platform/#configuring-the-default-configuration-document).
 
 ??? functional "New administration commands for basic server properties"
-    The administration services support new commands to set up, retrieve and clear the basic server properties in a server's [configuration document](/concepts/configuration-document) in one operation.  These properties are *serverDescription*, and *maxPageSize*.  The new called are described in the [Administration Guide](/guides/admin/servers/configuring-a-metadata-access-store/#set-basic-server-properties).
+    The administration services support new commands to set up, retrieve and clear the basic server properties in a server's [configuration document](/concepts/configuration-document) in one operation.  These properties are *serverDescription*, *organizationName*, *localServerUserId*, *localServerPassword* and *maxPageSize*.  The new called are described in the [Administration Guide](/guides/admin/servers/configuring-a-metadata-access-store/#set-basic-server-properties).
 
 ??? functional "New administration command to retrieve the metadata collection name"
     The administration services support a new command to retrieve the metadata collection name set up for a repository in a [cohort member](/concepts/cohort-member) server.  This complements the calls to set up the metadata collection name and metadata collection id, and retrieve the metadata collection id.
 
 ??? tip "*Governance Action* is renamed to *Engine Action*"
-    If you have been using Egeria for a while, you may be familiar with the term *Governance Action* as the mechanism used to control the execution of automated actions in the [Engine Hosts](/concepts/engine-host).  In release 5.0, *Governance Action* is renamed to *Engine Action* to create a greater name differentiation between the concepts that are used to define the governance behaviour and those used to control the execution of this behaviour.  The term *Governance Action* is now used as a general term for a [Governance Action Process](/concepts/governance-action-process) or a [governance action type](/concepts/governance-action-type).  There is also a differentiation between a Governance Action Type that is used to initiate a standalone Engine Action and a specialized Governance Action Type called a [Governance Action Process Step](/concepts/governance-action-process-step) that describes a single step in a Governance Action Process.
+    If you have been using Egeria for a while, you may be familiar with the term *Governance Action* as the mechanism used to control the execution of automated actions in the [Engine Hosts](/concepts/engine-host).  In release 5.0, *Governance Action* is renamed to *Engine Action* to create a greater name differentiation between the concepts that are used to define the governance behaviour and those used to control the execution of this behaviour.  The term *Governance Action* is now used as a general term for a [Governance Action Process](/concepts/governance-action-process) or a [Governance Action Type](/concepts/governance-action-type).  There is also a differentiation between a Governance Action Type that is used to initiate a standalone Engine Action and a specialized Governance Action Type called a [Governance Action Process Step](/concepts/governance-action-process-step) that describes a single step in a Governance Action Process.
 
 ??? functional "New framework services"
     The framework services provide common services to the [Open Metadata Access Services (OMASs)](/services/omas).  The [Governance Action Framework Service](/services/gaf-metadata-management) includes a new ser of services called the `Open Governance Service` that provides services to define governance actions such as [governance action processes](/concepts/governance-action-process) and [governance action types](/concepts/governance-action-type), and the initiation of [engine actions](/concepts/engine-action) either directly or via a governance action process or governance action type.
@@ -148,9 +148,15 @@ Release 5.0 is a major functional release focused on usability, both from the po
     The developer of an [integration connector](/concepts/integration-connector) can provide information about the third party technology it exchanges metadata with through [catalog target types](/concepts/catalog-target).
 
 ??? functional "Governance Service Providers can now list action target types"
-The developer of a [governance service](/concepts/governance-service) can provide information about the third party technology it exchanges metadata with through [action target types](/concepts/action-target).
+    The developer of a [governance service](/concepts/governance-service) can provide information about the third party technology it exchanges metadata with through [action target types](/concepts/action-target).
 
 ??? functional "Extension to the OpenConnectorArchive"
     The `OpenMetadataArchive.omarchive` (was `OpenMetadataArchive.json`) now contains reference data for many [file types](/concepts/file-type) and [deployed implementation types](/concepts/deployed-implementation-type).  The deployed implementation types include details of Egeria's runtimes and services and how they link together.  The deployed implementation types are also linked to details of the connectors that work with the associated technology.  This is to assist someone setting up new automated curation and governance activities in the open metadata ecosystem.
+
+??? functional "IntelliJ HTTP Client"
+    The `omag-server-platform` assembly created during an egeria build now includes script files that exercise Egeria's REST API services using IntelliJ's HTTP Client.  These mirror the Postman collections that are also found in the assembly.
+
+??? info "Management of open metadata type definitions"
+    As the Egeria code base evolved, sets of definitions for the unique identifiers and type names of the open metadata types appeared in multiple modules.  There was a set in the open metadata archive helper, the generic handlers, multiple OMASs and the Governance Action Framework.  This was in addition to the original definitions in the open metadata type archive itself.  In release 5.0, these copies of the open metadata type identifiers have been consolidated into one set found in the Governance Action Framework.  There is still work to change the type definitions in the open metadata type archive to use the definitions from the GAF.  This change removes the inconsistencies and gaps in the definitions.  It also makes it easier to discover where a particular open metadata type is used.
 
 --8<-- "snippets/abbr.md"
