--- a/site/docs/release-notes/5-0.md
+++ b/site/docs/release-notes/5-0.md
@@ -32,7 +32,7 @@ Release 5.0 is a major functional release focused on usability, both from the po
     * There are new attributes called *isCaseSensitive* and *category* for [*ValidValueDefinition*](/types/5/0545-Reference-Data) that provides additional information used to match valid values. In addition, there are two new types of valid value relationship: *ValidValueAssociation* and *ConsistentValidValues*.
     * The [*ConnectorType*](/types/2/0201-Connectors-and-Connections) entity has a new attribute called *deployedImplementationType* to allow a connector writer to record the [deployed implementation type](/concepts/deployed-implementation-type) that the connector works with.
 
-??? warning "XTDB repository connector are now in egeria.git"
+??? warning "XTDB repository connector is now in egeria.git"
     The XTDB repository connector is now located in the core Egeria git repository which means it is always available in the containers and distributions.  This change is in recognition that XTDB is our premier metadata repository.  There are three new administration commands to simplify the configuration of an XTDB repository.
 
     * Configure XTDB with an in-memory repository
