Add file resource connector pages
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/5-0.md
+++ b/site/docs/release-notes/5-0.md
@@ -156,6 +156,9 @@ Release 5.0 is a major functional release focused on usability, both from the po
 ??? functional "IntelliJ HTTP Client"
     The `omag-server-platform` assembly created during an egeria build now includes script files that exercise Egeria's REST API services using IntelliJ's HTTP Client.  These mirror the Postman collections that are also found in the assembly.
 
+??? info "Default Audit Log console output has changed"
+    The default audit log output to the console for newly configured servers will no longer include the `Event` log entries and the `Types` log entries.  Existing servers will continue to log as before. The audit log entries displayed on the console by a server can be changed using the [Administration Services](/guides/admin/servers/configuring-a-metadata-access-store/#configure-the-audit-log).
+
 ??? info "Management of open metadata type definitions"
     As the Egeria code base evolved, sets of definitions for the unique identifiers and type names of the open metadata types appeared in multiple modules.  There was a set in the open metadata archive helper, the generic handlers, multiple OMASs and the Governance Action Framework.  This was in addition to the original definitions in the open metadata type archive itself.  In release 5.0, these copies of the open metadata type identifiers have been consolidated into one set found in the Governance Action Framework.  There is still work to change the type definitions in the open metadata type archive to use the definitions from the GAF.  This change removes the inconsistencies and gaps in the definitions.  It also makes it easier to discover where a particular open metadata type is used.
 
