--- a/site/docs/release-notes/5-0.md
+++ b/site/docs/release-notes/5-0.md
@@ -31,6 +31,7 @@ Release 5.0 is a major functional release focused on usability, both from the po
     * The [*DataFile*](/types/2/0220-Files-and-Folders) type has a attribute called *fileExtension*.  New types that inherit from *DataFile* have been defined for a wide range of file types: [*SpreadsheetFile*](/types/2/0220-Files-and-Folders), [*XMLFile*](/types/2/0220-Files-and-Folders), [*AudioFile*](/types/2/0221-Document-Stores), [*VideoFile*](/types/2/0221-Document-Stores), [*3DImageFile*](/types/2/0221-Document-Stores), [*RasterFile*](/types/2/0221-Document-Stores), [*VectorFile*](/types/2/0221-Document-Stores), [*SourceCodeFile*](/types/2/0280-Software-Development-Assets), [*ExecutableFile*](/types/2/0280-Software-Development-Assets), [*ScriptFile*](/types/2/0280-Software-Development-Assets), [*BuildInstructionFile*](/types/2/0280-Software-Development-Assets), [*YAMLFile*](/types/2/0280-Software-Development-Assets), [*PropertiesFile*](/types/2/0280-Software-Development-Assets), and [*ArchiveFile*](/types/2/0226-Archive-Files).  There is also a new relationship called [*ArchiveFileContents*](/types/2/0226-Archive-Files) to identify the contents of an archive file.
     * There are new attributes called *isCaseSensitive* and *category* for [*ValidValueDefinition*](/types/5/0545-Reference-Data) that provides additional information used to match valid values. In addition, there are two new types of valid value relationship: *ValidValueAssociation* and *ConsistentValidValues*.
     * The [*ConnectorType*](/types/2/0201-Connectors-and-Connections) entity has a new attribute called *deployedImplementationType* to allow a connector writer to record the [deployed implementation type](/concepts/deployed-implementation-type) that the connector works with.
+    * The [*Template*](/types/0/0011-Managing-Referenceables) classification has three new properties: *placeholderProperties*, *replacementProperties*, *additionalProperties*.  This model also includes a new relationship called *CatalogTemplate* to identify a template for a particular type of technology.
 
 ??? warning "XTDB repository connector is now in egeria.git"
     The XTDB repository connector is now located in the core Egeria git repository which means it is always available in the containers and distributions.  This change is in recognition that XTDB is our premier metadata repository.  There are three new administration commands to simplify the configuration of an XTDB repository.
