--- a/site/docs/release-notes/5-0.md
+++ b/site/docs/release-notes/5-0.md
@@ -31,7 +31,7 @@ Release 5.0 is a major functional release focused on usability, both from the po
     * The [*DataFile*](/types/2/0220-Files-and-Folders) type has a attribute called *fileExtension*.  New types that inherit from *DataFile* have been defined for a wide range of file types: [*SpreadsheetFile*](/types/2/0220-Files-and-Folders), [*XMLFile*](/types/2/0220-Files-and-Folders), [*AudioFile*](/types/2/0221-Document-Stores), [*VideoFile*](/types/2/0221-Document-Stores), [*3DImageFile*](/types/2/0221-Document-Stores), [*RasterFile*](/types/2/0221-Document-Stores), [*VectorFile*](/types/2/0221-Document-Stores), [*SourceCodeFile*](/types/2/0280-Software-Development-Assets), [*ExecutableFile*](/types/2/0280-Software-Development-Assets), [*ScriptFile*](/types/2/0280-Software-Development-Assets), [*BuildInstructionFile*](/types/2/0280-Software-Development-Assets), [*YAMLFile*](/types/2/0280-Software-Development-Assets), [*PropertiesFile*](/types/2/0280-Software-Development-Assets), and [*ArchiveFile*](/types/2/0226-Archive-Files).  There is also a new relationship called [*ArchiveFileContents*](/types/2/0226-Archive-Files) to identify the contents of an archive file.
     * There are new attributes called *isCaseSensitive* and *category* for [*ValidValueDefinition*](/types/5/0545-Reference-Data) that provides additional information used to match valid values. In addition, there are two new types of valid value relationship: *ValidValueAssociation* and *ConsistentValidValues*.
     * The [*ConnectorType*](/types/2/0201-Connectors-and-Connections) entity has a new attribute called *deployedImplementationType* to allow a connector writer to record the [deployed implementation type](/concepts/deployed-implementation-type) that the connector works with.
-    * The [*Template*](/types/0/0011-Managing-Referenceables) classification has three new properties: *placeholderProperties*, *replacementProperties*, *additionalProperties*.  This model also includes a new relationship called *CatalogTemplate* to identify a template for a particular type of technology.
+    * The [*Template*](/types/0/0011-Managing-Referenceables) classification has three new properties: *versionIdentifier*, *placeholderProperties* and *replacementProperties*.  This model also includes a new relationship called *CatalogTemplate* to identify a template for a particular type of technology.
 
 ??? warning "XTDB repository connector is now in egeria.git"
     The XTDB repository connector is now located in the core Egeria git repository which means it is always available in the containers and distributions.  This change is in recognition that XTDB is our premier metadata repository.  There are three new administration commands to simplify the configuration of an XTDB repository.
@@ -72,6 +72,16 @@ Release 5.0 is a major functional release focused on usability, both from the po
 
 ??? functional "Placeholder variables supported in the configuration document"
     It is possible to add placeholders in string properties of an OMAG Server's [configuration document](/concepts/configuration-document).  The replacement values are configured either by a REST API call (OMAG Server Platform only), or, more typically in the `application.properties` for either the OMAG Server Platform or OMAG Server Runtime.  The placeholders are replaced by these values each time the server starts.   This means that the server can be run in different environments without reconfiguring the server.  Full details can be found in the [Configuration Document](/concepts/configuration-document) documentation.
+
+??? functional "Placeholder properties supported in metadata templates"
+    It is possible to add placeholders to properties in metadata elements that .  The replacement values are configured either by a REST API call (OMAG Server Platform only), or, more typically in the `application.properties` for either the OMAG Server Platform or OMAG Server Runtime.  The placeholders are replaced by these values each time the server starts.   This means that the server can be run in different environments without reconfiguring the server.  Full details can be found in the [Configuration Document](/concepts/configuration-document) documentation.
+
+??? danger "Removal of the Anonymous Repository Services"
+    The anonymous versions to the OMRS Metadata Collection REST APIs have been removed from Egeria's runtimes since they do not include
+    caller information, and therefore provide opportunities for a denial of service attack.
+      * getMetadataCollectionId
+      * getEntity
+      * getRelationship
 
 ??? tip "*Governance Action* is renamed to *Engine Action*"
     If you have been using Egeria for a while, you may be familiar with the term *Governance Action* as the mechanism used to control the execution of automated actions in the [Engine Hosts](/concepts/engine-host).  In release 5.0, *Governance Action* is renamed to *Engine Action* to create a greater name differentiation between the concepts that are used to define the governance behaviour and those used to control the execution of this behaviour.  The term *Governance Action* is now used as a general term for a [Governance Action Process](/concepts/governance-action-process) or a [Governance Action Type](/concepts/governance-action-type).  There is also a differentiation between a Governance Action Type that is used to initiate a standalone Engine Action and a specialized Governance Action Type called a [Governance Action Process Step](/concepts/governance-action-process-step) that describes a single step in a Governance Action Process.
